5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1716_2497.log
== SUBMITION (2019-05-03 10:27:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.192027
-- ERROR:
  File "/home/codebench/codes/1716/2497/main.py", line 17
    t = ????
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:33:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 

print(round(t, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:34:16) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(t, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:34:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(t, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:35:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

	print(round(t,2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
1220.45
1867.53
2540.49
3240.37
3968.24
4725.23
5512.5
6331.26
7182.77
8068.34
8989.34
9947.17
10943.32
11979.31
13056.74
14177.27
15342.62
16554.59
17815.03
19125.89
20489.19
21907.02
23381.56
24915.08
26509.94
28168.6
29893.61
31687.61
33553.37
35493.77
37511.78
39610.51
41793.19
44063.18
46423.97
48879.19
51432.61
54088.18
56849.97
59722.22
62709.37
65816.01
69046.91
72407.04
75901.59
79535.91
83315.61
87246.49
91334.61
95586.25
100007.96
104606.54
109389.06
114362.89
119535.66
124915.35
130510.22
136328.89
142380.31
148673.78
155218.99
162026.01
169105.31
176467.78
184124.75
192088.0
200369.78
208982.84
217940.41
227256.29
236944.8
247020.85
257499.94
268398.2
279732.39
291519.94
303779.0
316528.42
329787.82
343577.59
357918.96
372833.97
388345.59
404477.68
421255.04
438703.51
456849.91
475722.16
495349.31
515761.54
536990.26
559068.13
582029.12
605908.54
630743.15
656571.13
683432.24
711367.79
740420.76
770635.85
802059.54
834740.18
868728.05
904075.43
940836.71
979068.44
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:36:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(t,2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
1220.45
1867.53
2540.49
3240.37
3968.24
4725.23
5512.5
6331.26
7182.77
8068.34
8989.34
9947.17
10943.32
11979.31
13056.74
14177.27
15342.62
16554.59
17815.03
19125.89
20489.19
21907.02
23381.56
24915.08
26509.94
28168.6
29893.61
31687.61
33553.37
35493.77
37511.78
39610.51
41793.19
44063.18
46423.97
48879.19
51432.61
54088.18
56849.97
59722.22
62709.37
65816.01
69046.91
72407.04
75901.59
79535.91
83315.61
87246.49
91334.61
95586.25
100007.96
104606.54
109389.06
114362.89
119535.66
124915.35
130510.22
136328.89
142380.31
148673.78
155218.99
162026.01
169105.31
176467.78
184124.75
192088.0
200369.78
208982.84
217940.41
227256.29
236944.8
247020.85
257499.94
268398.2
279732.39
291519.94
303779.0
316528.42
329787.82
343577.59
357918.96
372833.97
388345.59
404477.68
421255.04
438703.51
456849.91
475722.16
495349.31
515761.54
536990.26
559068.13
582029.12
605908.54
630743.15
656571.13
683432.24
711367.79
740420.76
770635.85
802059.54
834740.18
868728.05
904075.43
940836.71
979068.44
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:36:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
if (qi>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(t,2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:38:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
if (tempo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = (t + saldo )*tempo

print(round(t,2)) # Exibicao de resultados
-- OUTPUT:
3589.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:38:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
if (tempo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = (t + saldo )

print(round(t,2)) # Exibicao de resultados
-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:40:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
if (tempo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + tempo

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:41:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
if (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + tempo

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:41:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
if (qi>tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + tempo

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:42:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
if (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + tempo

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:42:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:43:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > t):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:44:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > t):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo - 1

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:45:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > t):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:45:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > t):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + tempo

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:46:53) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + tempo

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:47:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t >= 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + tempo

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:48:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 10:48:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo,2)) # Exibicao de resultados
-- EXECUTION TIME:
0.152305
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:50:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>0):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo - 1

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:51:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>0):
	rend = saldo * juros
	saldo = saldo + rend
	tempo = tempo - 1

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:52:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>t):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:54:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < 5*12):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
6051.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:54:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo*12):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
9688.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:54:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < 5*12):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
6051.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:55:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:55:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(t)
print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
1
2
3
4
5
6
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 10:55:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 10:55:33) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo,2)) # Exibicao de resultados
-- EXECUTION TIME:
0.117299
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:46:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:46:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:07:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:07:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo,2)) # Exibicao de resultados
-- EXECUTION TIME:
0.123814
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
